# NexusV1

./: .gitignore  NexusSyntax.txt  README.md  TODO.txt  debug.py  interpreter.py  lexer.py  parser.py  pyproject.toml  test_else.py
example/: hello.nx
src/: cli.py  debug.py  interpreter.py  parser.py  test_else.py
src/nexus/: __init__.py  cli.py  interpreter.py  test_else.py
test/: test_interpreter.py  test_lexer.py  test_parser.py
