[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"  
version = "0.1.0"  
authors = [
    {name = "Dale Siatong", email = "daledev07@gmail.com"},
]
description = "Your package description"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"} 
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["nexus", "beginner-friendly", "interpreter"]
dependencies = [
    colorama==0.4.6
    iniconfig==2.1.0
    packaging==25.0
    pluggy==1.6.0
    Pygments==2.19.2
    pytest==8.4.1
]

[project.urls]
Homepage = "https://github.com/DaleStack/NexusV1"
Documentation = "https://github.com/DaleStack/NexusV1/blob/main/README.md"
Issues = "https://github.com/DaleStack/NexusV1/issues"

# Entry points for CLI
[project.scripts]
nexus = "nexus.cli:main" 

# Package discovery
[tool.hatch.build.targets.wheel]
packages = ["nexus"]

# Include additional files
[tool.hatch.build.targets.sdist]
include = [
    "src/nexus/*",
    "tests/*",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]